Correct spacing

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,8 +1,6 @@
 @import 'variables';
 
 footer.page-footer {
-  margin-top: 3rem;
-  padding-bottom: 1rem;
   background: $charcoal;
   color: $white;
   p {
